--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,72 @@
-aiohttp==3.8.1
-aiosignal==1.2.0
-alembic==1.7.5
-APScheduler==3.9.1
-astral==2.2
-async-timeout==4.0.2
-attrs==21.4.0
-certifi==2021.10.8
-charset-normalizer==2.0.9
-click==8.0.3
-colorama==0.4.4
-discordwebhook==1.0.3
-Flask==2.0.2
-Flask-APScheduler==1.12.4
-Flask-Cors==3.0.10
-Flask-Migrate==3.1.0
-Flask-SQLAlchemy==2.5.1
-frozenlist==1.2.0
-greenlet==1.1.2
+attrs==22.2.0
+Automat==22.10.0
+Babel==2.10.3
+bcrypt==3.2.2
+blinker==1.5
+certifi==2022.9.24
+chardet==5.1.0
+click==8.1.3
+cloud-init==23.2.2
+colorama==0.4.6
+command-not-found==0.3
+configobj==5.0.8
+constantly==15.1.0
+cryptography==38.0.4
+dbus-python==1.3.2
+distro==1.8.0
+distro-info==1.5
+gyp==0.1
+httplib2==0.20.4
+hyperlink==21.0.0
 idna==3.3
-itsdangerous==2.0.1
-Jinja2==3.0.3
-Mako==1.1.6
-MarkupSafe==2.0.1
-multidict==5.2.0
-numpy==1.21.4
-pandas==1.3.4
-psycopg2==2.9.2
-python-dateutil==2.8.2
-python-dotenv==0.19.2
-pytz==2021.3
-pytz-deprecation-shim==0.1.0.post0
-requests==2.26.0
-sh==1.14.2
+importlib-metadata==4.12.0
+incremental==21.3.0
+jaraco.classes==3.2.1
+jeepney==0.8.0
+Jinja2==3.1.2
+jsonpatch==1.32
+jsonpointer==2.0
+jsonschema==4.6.0
+keyring==23.9.3
+launchpadlib==1.11.0
+lazr.restfulclient==0.14.5
+lazr.uri==1.0.6
+markdown-it-py==2.1.0
+MarkupSafe==2.1.2
+mdurl==0.1.2
+more-itertools==8.10.0
+netifaces==0.11.0
+oauthlib==3.2.2
+pexpect==4.8.0
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+Pygments==2.14.0
+PyGObject==3.44.1
+PyHamcrest==2.0.3
+PyJWT==2.6.0
+pyOpenSSL==23.0.0
+pyparsing==3.0.9
+pyrsistent==0.18.1
+pyserial==3.5
+python-apt==2.5.3+ubuntu1
+python-debian==0.1.49+ubuntu2
+python-magic==0.4.26
+pytz==2022.7.1
+PyYAML==6.0
+requests==2.28.1
+rich==13.3.1
+SecretStorage==3.3.3
+service-identity==18.1.0
 six==1.16.0
-SQLAlchemy==1.4.27
-tzdata==2022.1
-tzlocal==4.2
-urllib3==1.26.7
-Werkzeug==2.0.2
-yarl==1.7.2
+sos==4.5.6
+ssh-import-id==5.11
+systemd-python==235
+Twisted==22.4.0
+ubuntu-advantage-tools==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==1.26.12
+wadllib==1.3.6
+zipp==1.0.0
+zope.interface==5.5.2
